--- a/Kaffeplaneten/Administrasjon/Views/AdminCustomer/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminCustomer/Edit.cshtml
@@ -113,9 +113,10 @@
             </div>
         </div>
     }
-
+        <hr />
     <div>
-        @Html.ActionLink("Tilbake", "AllCustomers")
+        @Html.ActionLink("Avbryt", "AllCustomers", "AdminCustomer", new { @class = "btn btn-default" })
+
     </div>
 
 </div>
