--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
@@ -6,7 +6,7 @@
 @Html.Action("HeaderAndMenuBar", "Layout")
 
 <div class="container">
-        <h2>Endre produkt</h2>
+        <h2>Rediger produktinformasjon</h2>
 
 
     @using (Html.BeginForm())
@@ -14,7 +14,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>ProductModel</h4>
+
             <hr />
             <div class="form-group">
                 @Html.LabelFor(model => model.productID, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -70,15 +70,24 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Lagre endringer" class="btn btn-default" />
                 </div>
             </div>
         </div>
+
     }
+    <hr />
     <div>
-        @Html.ActionLink("Tilbake", "AllProducts")
+        @Html.ActionLink("Avbryt", "AllProducts", "AdminProduct", new { @class = "btn btn-default" })
+        
     </div>
 </div>
+
+
+
+
+
+
 
 
 
