Filopplaster fungerer. Combobox i Add fungerer, men trenger mer arbeid da den lagerer HELE linken til bildet.

--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
@@ -10,6 +10,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <p>
         @Html.ActionLink("Nytt produkt", "Add", null, new { @class = "btn btn-success " })
+        @Html.ActionLink("Last opp bilder", "Uploader", null, new { @class = "btn btn-success " })
     </p>
     <table class="table table-hover table-striped">
         <tr>
