--- a/Kaffeplaneten/Administrasjon/Views/Layout/Home.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/Home.cshtml
@@ -11,12 +11,13 @@
                     <h2>Bruker: <a id="nameAdmin">@(Session["username"])</a></h2>
                 </div>
             </div>
-        <div style="text-align: center;" class="container panel-body col-md-offset-3 col-md-6">
-            <h2>Velkommen til administrasjonssiden for Kaffeplaneten</h2>
-            <p >Ut ifra dine rettigheter som ansatt, får du vist det du har behov for.</p>
-            <p>Skulle du mangle rettigheter, ta kontakt med administrasjonen.</p>
-            <p>Dine rettigheter er: </p>
-
+        <div class="container panel-body col-md-offset-3 col-md-6">
+            <div style="text-align: center;">
+                <h2><strong>Velkommen til administrasjonssiden for Kaffeplaneten</strong></h2>
+                <h3>Ut ifra dine rettigheter som ansatt, får du vist det du har behov for.</h3>
+                <h3>Skulle du mangle rettigheter, ta kontakt med administrasjonen.</h3>
+                <h3><u>Dine rettigheter er: </u></h3>
+            </div>
             @{
 
                 bool employeeAdmin = (bool)Session["employeeAdmin"];
@@ -27,28 +28,38 @@
 
                 if (employeeAdmin)
                 {
-                    <h3>Rettighet til å endre ansattoplysninger</h3>
+                    <ul style="list-style-type:disc">
+                        <li><h3>Rettighet til å endre ansattoplysninger</h3></li>
+                    </ul>
                 }
                 if (customerAdmin)
                 {
-                    <h3>Rettighet til å endre kundeoplysninger</h3>
+                    <ul style="list-style-type:disc">
+                        <li><h3> Rettighet til å endre kundeoplysninger</h3></li>
+                    </ul>
                 }
                 if (orderAdmin)
                 {
-                    <h3>Rettighet til å endre ordreoplysninger</h3>
+                    <ul style="list-style-type:disc">
+                        <li><h3>Rettighet til å endre ordreoplysninger</h3></li>
+                    </ul>
                 }
                 if (productAdmin)
                 {
-                    <h3>Rettighet til å endre produkter, slette, oppdatere og legge til nye</h3>
+                    <ul style="list-style-type:disc">
+                        <li><h3>Rettighet til å endre produkter, slette, oppdatere og legge til nye</h3></li>
+                    </ul>
                 }
                 if (DatabaseAdmin)
                 {
-                    <h3>Rettighet til å lese databaselogg og se over alle endringer som har skjedd av de ulike brukerne</h3>
+                    <ul style="list-style-type:disc">
+                        <li><h3>Rettighet til å lese databaselogg og se over alle endringer som har skjedd av de ulike brukerne</h3></li>
+                    </ul>
                 }
 
-            }
+             }
 
-        </div>
+</div>
 
        </div>
      </div>
