--- a/Kaffeplaneten/Administrasjon/Views/Security/Loginview.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Security/Loginview.cshtml
@@ -74,7 +74,7 @@
                         <div class="modal-footer">
                             
                             <button type="button" class="btn btn-info" data-dismiss="modal">Lukk</button>
-                            <button type="button" onclick="forgot()" class="btn btn-primary">Senddd</button>
+                            <button type="button" onclick="forgot()" class="btn btn-primary">Send</button>
                         </div>
                     </div>
                 </div>
