--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
@@ -45,7 +45,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.imageURL, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.imageURL, new SelectList(combobox));
+                    @Html.DropDownListFor(model => model.imageURL, new SelectList(combobox))
                     @Html.ValidationMessageFor(model => model.imageURL, "", new { @class = "text-danger" })
                 </div>
             </div>
