--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
@@ -1,7 +1,13 @@
 ﻿@model Kaffeplaneten.Models.ProductModel
-
 @{
     ViewBag.Title = "Edit";
+    string[] files = System.IO.Directory.GetFiles((AppDomain.CurrentDomain.BaseDirectory + "Content\\img\\"));
+    var filenames = new List<String>();
+    foreach (var i in files)
+    {
+        filenames.Add(Path.GetFileName(i));
+    }
+    var combobox = filenames.ToList();
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
 
@@ -39,13 +45,19 @@
                     @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+
             <div class="form-group">
                 @Html.LabelFor(model => model.imageURL, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.imageURL, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(model => model.imageURL, new SelectList(combobox))
                     @Html.ValidationMessageFor(model => model.imageURL, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+
+
+
             <div class="form-group">
                 @Html.LabelFor(model => model.stock, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
