Fikset viewbag titler

--- a/Kaffeplaneten/Administrasjon/Views/AdminEmployee/AllEmployees.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminEmployee/AllEmployees.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Kaffeplaneten.Models.EmployeeModel>
 @{
-    ViewBag.Title = "AllEmployees";
+    ViewBag.Title = "Ansatte - KaffeplanetenAdmin";
 }
 @Html.AntiForgeryToken()
 @Html.ValidationSummary(true)
