--- a/Kaffeplaneten/Administrasjon/Views/AdminEmployee/createEmployee.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminEmployee/createEmployee.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Kaffeplaneten.Models.EmployeeModel
 @{
-    ViewBag.Title = "createEmployee";
+    ViewBag.Title = "Opprett ansatt - KaffeplanetenAdmin";
 }
 @using (Html.BeginForm())
 {
