--- a/Kaffeplaneten/Administrasjon/Views/AdminEmployee/deleteEmployee.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminEmployee/deleteEmployee.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Kaffeplaneten.Models.EmployeeModel
 @{
-    ViewBag.Title = "deleteEmployee";
+    ViewBag.Title = "Slett ansatt - KaffeplanetenAdmin";
 }
 @using (Html.BeginForm())
 {
