--- a/Kaffeplaneten/Administrasjon/Views/AdminLogging/Logging.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminLogging/Logging.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Logs";
+    ViewBag.Title = "Logger - KaffeplanetenAdmin";
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
 
