--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Kaffeplaneten.Models.ProductModel>
 
 @{
-    ViewBag.Title = "AllProducts";
+    ViewBag.Title = "Produkter - KaffeplanetenAdmin";
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
 
