--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Details.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Kaffeplaneten.Models.ProductModel
 @Html.Action("HeaderAndMenuBar", "Layout")
 @{
-    ViewBag.Title = "Produktdetaljer";
+    ViewBag.Title = "Produktdetaljer - KaffeplanetenAdmin";
 }
 
 <div class="container">
