--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Kaffeplaneten.Models.ProductModel
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Endre produkt - KaffeplanetenAdmin";
     string[] files = System.IO.Directory.GetFiles((AppDomain.CurrentDomain.BaseDirectory + "Content\\img\\"));
     var filenames = new List<String>();
     foreach (var i in files)
