--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Uploader.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Uploader.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Web.Helpers;
 @{
-    ViewBag.Title = "Uploader";
+    ViewBag.Title = "Bildeopplaster - KaffeplanetenAdmin";
 }
 
 @Html.Action("HeaderAndMenuBar", "Layout")
