--- a/Kaffeplaneten/Administrasjon/Views/Security/Loginview.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Security/Loginview.cshtml
@@ -3,7 +3,7 @@
 @model Kaffeplaneten.Models.UserModel
 
 @{
-    ViewBag.Title = "Administrasjonsinnlogging Kaffeplaneten";
+    ViewBag.Title = "Administrasjonsinnlogging - KaffeplanetenAdmin";
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
 @using (Html.BeginForm())
