--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Kaffeplaneten.Models.ProductModel>
 
 @{
-    ViewBag.Title = "Products";
+    ViewBag.Title = "Produkter";
 
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
