--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
@@ -34,7 +34,7 @@
                                 <h3 id="pName">-@produkt.category-</h3>
                                 <h2>@produkt.price,-</h2>
                                 <p id="pDes">@produkt.description</p>
-                                <p>@produkt.stock </p>
+                                <p>@Html.LabelFor(model => produkt.stock) @produkt.stock </p>
 
                             <input id="quantity-@produkt.productID" class="qty-input form-group" placeholder="velg antall.." type="number" value="1" />
                             <button data-toggle="popover" data-trigger="focus" data-content="@produkt.productName er lagt til i handlekurven." type="button" id="@produkt.productID" class="btn btn-default" onclick="putInCart(@produkt.productID)">Legg i handlekurv <span class="glyphicon glyphicon-shopping-cart"></span></button>
