--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Kaffeplaneten.Models.ProductModel
 
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Nytt produkt - KaffeplanetenAdmin";
     string[] files = System.IO.Directory.GetFiles((AppDomain.CurrentDomain.BaseDirectory + "Content\\img\\"));
     var filenames = new List<String>();
     foreach(var i in files)
