--- a/Kaffeplaneten/Administrasjon/Views/Shared/HelpView.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Shared/HelpView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Kaffeplaneten.Models.OrderModel>
 @Html.Action("HeaderAndMenuBar", "Layout")
 @{
-    ViewBag.Title = "AllOrders";
+    ViewBag.Title = "Ordre - KaffeplanetenAdmin";
 }
 
 
