--- a/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
@@ -57,7 +57,7 @@
                                 }
                                 if (orderAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-gift"></span>@Html.ActionLink("Ordreredigering", "AllOrders", "AdminOrder", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-gift"></span>@Html.ActionLink("Ordreredigering", "CustomerOrders", "AdminOrder", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 }
                                 if (productAdmin)
                                 {
