--- a/Kaffeplaneten/Administrasjon/Views/AdminLogging/Logging.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminLogging/Logging.cshtml
@@ -10,10 +10,10 @@
 <link href="~/Scripts/jquery.bootgrid.css" rel="stylesheet" />
 
 <div class="container">
-    <h2>User Log:</h2>
+    <h2>Brukerlogg:</h2>
     <table id="grid-basic" class="table table-condensed table-hover table-striped">
     </table>
-    <h2>Database Log:</h2>
+    <h2>Databaselogg:</h2>
     <table id="grid-database" class="table table-condensed table-hover table-striped"></table>
 </div>
 
