--- a/Kaffeplaneten/Administrasjon/Views/AdminLogging/Logging.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminLogging/Logging.cshtml
@@ -32,7 +32,7 @@
             success: function (response) {
                 var messages = response;
                 $('#grid-basic').empty();
-                $('#grid-basic').append("<thead><tr><th data-column-id=\"Date\" data-order=\"asc\">Dato:</th><th data-column-id=\"UserID\">Bruker ID:</th><th data-column-id=\"User\">Brukernavn:</th><th data-column-id=\"Action\">Logg:</th></tr></thead><tbody>");
+                $('#grid-basic').append("<thead><tr><th data-column-id=\"Date\" data-order=\"asc\">Dato:</th><th data-column-id=\"UserID\">Brukernavn:</th><th data-column-id=\"User\">Navn:</th><th data-column-id=\"Action\">Logg:</th></tr></thead><tbody>");
                 $.each(messages, function (index, message) {
                     $('#grid-basic').append('<tr><td>' + message.Date + '</td><td>' +
                                             message.UserID + '</td><td>' +
